--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -11,9 +11,9 @@
 :where(:root, .#{$menu-toggle}) {
   --#{$menu-toggle}--ColumnGap: var(--pf-t--global--spacer--sm);
   --#{$menu-toggle}--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--default);
-  --#{$menu-toggle}--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--compact);
+  --#{$menu-toggle}--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) / 2);
   --#{$menu-toggle}--PaddingBlockEnd: var(--pf-t--global--spacer--control--vertical--default);
-  --#{$menu-toggle}--PaddingInlineStart: var(--pf-t--global--spacer--control--horizontal--compact);
+  --#{$menu-toggle}--PaddingInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--default) / 2);
   --#{$menu-toggle}--MinWidth: calc(var(--#{$menu-toggle}--FontSize) * var(--#{$menu-toggle}--LineHeight) + var(--#{$menu-toggle}--PaddingBlockStart) + var(--#{$menu-toggle}--PaddingBlockEnd));
   --#{$menu-toggle}--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$menu-toggle}--Color: var(--pf-t--global--text--color--regular);
@@ -59,14 +59,14 @@
 
   // TODO: add pf-m-button modifier here
   // * Menu toggle control
-  --#{$menu-toggle}--m-control--PaddingInlineStart: var(--pf-t--global--spacer--control--horizontal--compact);
-  --#{$menu-toggle}--m-control--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--compact);
+  --#{$menu-toggle}--m-control--PaddingInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--default) / 2);
+  --#{$menu-toggle}--m-control--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) / 2);
   --#{$menu-toggle}--m-control--BorderRadius: var(--pf-t--global--border--radius--pill);
 
   // TODO: add pf-m-button modifier here
   // * Menu toggle action
-  --#{$menu-toggle}--m-action--PaddingInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--compact) * 3);
-  --#{$menu-toggle}--m-action--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--compact) * 3);
+  --#{$menu-toggle}--m-action--PaddingInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--default) + var(--pf-t--global--spacer--sm));
+  --#{$menu-toggle}--m-action--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) + var(--pf-t--global--spacer--sm));
   --#{$menu-toggle}--m-action--BorderRadius: var(--pf-t--global--border--radius--pill);
 
   // * Menu toggle primary
@@ -107,8 +107,8 @@
   --#{$menu-toggle}__controls--MinWidth: calc(var(--#{$menu-toggle}--FontSize) + var(--pf-t--global--spacer--sm) + var(--pf-t--global--spacer--sm));
 
   // Full height
-  --#{$menu-toggle}--m-full-height--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--compact) * 3);
-  --#{$menu-toggle}--m-full-height--PaddingInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--compact) * 3);
+  --#{$menu-toggle}--m-full-height--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) + var(--pf-t--global--spacer--sm));
+  --#{$menu-toggle}--m-full-height--PaddingInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--default) + var(--pf-t--global--spacer--sm));
 
   // Split button, child
   --#{$menu-toggle}--m-split-button--child--disabled--Color: var(--pf-t--global--text--color--on-disabled);
@@ -132,8 +132,8 @@
   // Split button, controls, check
   --#{$menu-toggle}__button--BackgroundColor: transparent;
   --#{$menu-toggle}__button--AlignSelf: baseline;
-  --#{$menu-toggle}__button--PaddingInlineStart: var(--pf-t--global--spacer--control--horizontal--compact);
-  --#{$menu-toggle}__button--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--compact);
+  --#{$menu-toggle}__button--PaddingInlineStart: var(--pf-t--global--spacer--control--horizontal--plain);
+  --#{$menu-toggle}__button--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--plain);
   --#{$menu-toggle}__button--MinWidth: calc(var(--#{$menu-toggle}--FontSize) * var(--#{$menu-toggle}--LineHeight) + var(--#{$menu-toggle}--PaddingBlockStart) + var(--#{$menu-toggle}--PaddingBlockEnd));
   --#{$menu-toggle}__button--m-text--PaddingInlineStart: var(--pf-t--global--spacer--sm);
 
@@ -147,12 +147,12 @@
   --#{$menu-toggle}--m-plain--disabled--BackgroundColor: transparent; // picking icon color rather than text...?
 
   // Typeahead
-  --#{$menu-toggle}--m-typeahead--c-text-input-group__utilities--c-button--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--compact);
+  --#{$menu-toggle}--m-typeahead--c-text-input-group__utilities--c-button--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--plain);
   --#{$menu-toggle}--m-typeahead__button--AlignSelf: stretch;
 
   // * Menu toggle small
-  --#{$menu-toggle}--m-small--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--compact);
-  --#{$menu-toggle}--m-small--PaddingBlockEnd: var(--pf-t--global--spacer--control--vertical--compact);
+  --#{$menu-toggle}--m-small--PaddingBlockStart: calc(var(--pf-t--global--spacer--control--vertical--plain) / 2);
+  --#{$menu-toggle}--m-small--PaddingBlockEnd: calc(var(--pf-t--global--spacer--control--vertical--plain) / 2);
   --#{$menu-toggle}--m-small--ColumnGap: calc(var(--pf-t--global--spacer--control--horizontal--compact) / 2);
   --#{$menu-toggle}--m-small--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$menu-toggle}--m-small__controls--MinWidth: calc(var(--#{$menu-toggle}--FontSize) + var(--pf-t--global--spacer--xs) + var(--pf-t--global--spacer--xs));
