--- a/src/patternfly/components/Alert/alert.scss
+++ b/src/patternfly/components/Alert/alert.scss
@@ -19,9 +19,9 @@
   --#{$alert}--FontSize: var(--pf-t--global--font--size--body--default);
 
   // Toggle
-  --#{$alert}__toggle--MarginBlockStart: calc(var(--pf-t--global--spacer--control--vertical--default) * -1);
-  --#{$alert}__toggle--MarginBlockEnd: calc(var(--pf-t--global--spacer--control--vertical--default) * -1);
-  --#{$alert}__toggle--MarginInlineEnd: var(--pf-t--global--spacer--sm);
+  --#{$alert}__toggle--MarginBlockStart: calc(-1 * var(--pf-t--global--spacer--action--vertical--default) - #{pf-size-prem(1px)});
+  --#{$alert}__toggle--MarginBlockEnd: calc(-1 * var(--pf-t--global--spacer--action--vertical--default));
+  --#{$alert}__toggle--MarginInlineEnd: var(--pf-t--global--spacer--action--vertical--default);
 
   // Toggle icon
   --#{$alert}__toggle-icon--Rotate: 0;
