--- a/src/patternfly/components/Hint/hint.scss
+++ b/src/patternfly/components/Hint/hint.scss
@@ -57,13 +57,14 @@
   grid-column: 2;
   grid-auto-flow: column;
   align-self: start;
+  margin-block-start: var(--#{$hint}__actions--c-menu-toggle--MarginBlockStart);
+  margin-block-end: var(--#{$hint}__actions--c-menu-toggle--MarginBlockEnd);
   margin-inline-start: var(--#{$hint}__actions--MarginInlineStart);
   text-align: end;
 
-  .#{$menu-toggle}.pf-m-plain {
-    // --pf-v6-c-menu-toggle--PaddingBlockEnd: 0;
-    margin-block-start: var(--#{$hint}__actions--c-menu-toggle--MarginBlockStart);
-    margin-block-end: var(--#{$hint}__actions--c-menu-toggle--MarginBlockEnd);
+  &.pf-m-no-offset {
+    --#{$hint}__actions--c-menu-toggle--MarginBlockStart: 0;
+    --#{$hint}__actions--c-menu-toggle--MarginBlockEnd: 0;
   }
 
   + .#{$hint}__body {
