--- a/src/patternfly/demos/DataList/data-list-page-nav.hbs
+++ b/src/patternfly/demos/DataList/data-list-page-nav.hbs
@@ -1,6 +1,6 @@
 {{#> nav nav--attribute=(concat 'id="' page--id '-primary-nav" aria-label="Global"')}}
   {{#> nav-list}}
-    {{#> nav-item nav-item--IsExpandable="true" nav-item--expanded="true" nav-item--current="true"}}
+    {{#> nav-item nav-item--IsExpandable="true" nav-item--IsExpanded="true" nav-item--current="true"}}
       {{#> nav-link nav-link--href="#"}}
         Components
       {{/nav-link}}
