--- a/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
@@ -6,7 +6,7 @@
   {{#> page-sidebar}}
     {{#> nav nav--IsExpandable="true" nav--attribute=(concat 'id="' page--id '-expandable-nav" aria-label="Global"')}}
       {{#> nav-list}}
-        {{#> nav-item nav-item--IsExpandable="true" nav-item--expanded="true" nav-item--current="true"}}
+        {{#> nav-item nav-item--IsExpandable="true" nav-item--IsExpanded="true" nav-item--current="true"}}
           {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link1"')}}
             System panel
           {{/nav-link}}
