--- a/src/patternfly/components/Nav/nav-item.hbs
+++ b/src/patternfly/components/Nav/nav-item.hbs
@@ -5,9 +5,9 @@
     nav-item--modifier=nav--modifier
   }}
   {{#unless nav-item--IsFlyout}}
-    {{#ifAny nav-item--expanded nav-item--IsExpanded}}
+    {{#if nav-item--IsExpanded}}
       pf-m-expanded
-    {{/ifAny}}
+    {{/if}}
   {{/unless}}"
   {{#if nav-item--attribute}}
     {{{nav-item--attribute}}}
