--- a/src/patternfly/components/Nav/templates/nav--flyout.hbs
+++ b/src/patternfly/components/Nav/templates/nav--flyout.hbs
@@ -15,7 +15,7 @@
         Releases
       {{/nav-link}}
     {{/nav-item}}
-    {{#> nav-item nav-item--IsFlyout="true" nav-item--expanded="true"}}
+    {{#> nav-item nav-item--IsFlyout="true" nav-item--IsExpanded="true"}}
       {{#> nav-link nav-link--href="#" nav-link--IsCurrent=true}}
         Subscriptions
       {{/nav-link}}
