--- a/src/patternfly/demos/Page/page-template-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-template-expandable-nav.hbs
@@ -1,6 +1,6 @@
 {{#> nav nav--IsExpandable="true" nav--attribute=(concat 'id="' page--id '-expandable-nav" aria-label="Global"')}}
   {{#> nav-list}}
-    {{#> nav-item nav-item--IsExpandable="true" nav-item--expanded="true" nav-item--current="true"}}
+    {{#> nav-item nav-item--IsExpandable="true" nav-item--IsExpanded="true" nav-item--current="true"}}
       {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link1"')}}
         System panel
       {{/nav-link}}
