fix(tokens): simplify transition variables

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -17,22 +17,19 @@
   --#{$button}--TextDecoration: none;
   --#{$button}--TransitionDuration: var(--pf-t--global--motion--duration--fade--default);
   --#{$button}--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$button}--TransitionProperty: color, background-color, border-width, border-color, padding;
 
   // Hover
   --#{$button}--hover--BackgroundColor: transparent;
   --#{$button}--hover--BorderColor: transparent;
   --#{$button}--hover--BorderWidth: var(--pf-t--global--border--width--button--hover);
   --#{$button}--hover--TextDecoration: none;
-  --#{$button}--hover--TransitionDuration: var(--pf-t--global--motion--duration--fade--default);
-  --#{$button}--hover--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
   
 
   // Clicked
   --#{$button}--m-clicked--BackgroundColor: transparent;
   --#{$button}--m-clicked--BorderColor: transparent;
   --#{$button}--m-clicked--BorderWidth: var(--pf-t--global--border--width--button--clicked);
-  --#{$button}--m-clicked--TransitionDuration: var(--pf-t--global--motion--duration--fade--short);
-  --#{$button}--m-clicked--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
 
   // Primary
   --#{$button}--m-primary--Color: var(--pf-t--global--text--color--on-brand--default);
@@ -303,7 +300,7 @@
   border-end-end-radius: var(--#{$button}--BorderEndEndRadius, var(--#{$button}--BorderRadius));
   transition-timing-function: var(--#{$button}--TransitionTimingFunction);
   transition-duration: var(--#{$button}--TransitionDuration);
-  transition-property: background-color, color;
+  transition-property: var(--#{$button}--TransitionProperty);
 
   &::after {
     position: absolute;
@@ -313,9 +310,8 @@
     border: var(--#{$button}--BorderWidth) solid;
     border-color: var(--#{$button}--BorderColor);
     border-radius: inherit;
-    transition-timing-function: var(--#{$button}--TransitionTimingFunction);
-    transition-duration: var(--#{$button}--TransitionDuration);
-    transition-property: border-color, border-width, color;
+    transition-timing-function: inherit;
+    transition-duration: inherit;
   }
 
   // Primary
@@ -586,8 +582,6 @@
     --#{$button}--BorderWidth: var(--#{$button}--hover--BorderWidth);
     --#{$button}--TextDecoration: var(--#{$button}--hover--TextDecoration);
     --#{$button}__icon--Color: var(--#{$button}--hover__icon--Color);
-    --#{$button}--TransitionTimingFunction: var(--#{$button}--hover--TransitionTimingFunction);
-    --#{$button}--TransitionDuration: var(--#{$button}--hover--TransitionDuration);
   }
 
   &.pf-m-clicked {
@@ -596,8 +590,6 @@
     --#{$button}--BorderWidth: var(--#{$button}--m-clicked--BorderWidth);
     --#{$button}--BorderColor: var(--#{$button}--m-clicked--BorderColor);
     --#{$button}__icon--Color: var(--#{$button}--m-clicked__icon--Color);
-    --#{$button}--TransitionTimingFunction: var(--#{$button}--m-clicked--TransitionTimingFunction);
-    --#{$button}--TransitionDuration: var(--#{$button}--m-clicked--TransitionDuration);
   }
 
   // Disabled buttons
@@ -635,8 +627,6 @@
   &.pf-m-progress {
     --#{$button}--PaddingInlineEnd: var(--#{$button}--m-progress--PaddingInlineEnd);
     --#{$button}--PaddingInlineStart: var(--#{$button}--m-progress--PaddingInlineStart);
-
-    transition: var(--#{$button}--m-progress--TransitionProperty) var(--#{$button}--m-progress--TransitionDuration);
   }
 
   &.pf-m-in-progress {
