feat(button): add inherited transition property

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -311,6 +311,7 @@
     border-radius: inherit;
     transition-timing-function: inherit;
     transition-duration: inherit;
+    transition-property: inherit;
   }
 
   // Primary
