feat(button): combine inherited transition

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -309,9 +309,7 @@
     border: var(--#{$button}--BorderWidth) solid;
     border-color: var(--#{$button}--BorderColor);
     border-radius: inherit;
-    transition-timing-function: inherit;
-    transition-duration: inherit;
-    transition-property: inherit;
+    transition: inherit;
   }
 
   // Primary
